// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OfficialFeedback /> renders correctly for admin 1`] = `
<div>
  <OfficialFeedback__StyledOfficialFeedbackNew
    ideaId="ideaId"
  />
  <WrappedOfficialFeedback
    editingAllowed={true}
    ideaId="ideaId"
  />
</div>
`;

exports[`<OfficialFeedback /> renders correctly for non-admin 1`] = `
<div>
  <WrappedOfficialFeedback
    editingAllowed={false}
    ideaId="ideaId"
  />
</div>
`;
